Main-frame title no longer wraps.

--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -17,7 +17,6 @@
   }
 
   .main-header-title {
-    max-width: 100%;
     display: flex;
     align-items: center;
     h1 {
@@ -25,6 +24,7 @@
       font: $kth-font-title;
       font-weight: lighter;
       font-size: 500%;
+      white-space: nowrap;
     }
   }
 
